code hs 2.2 html page structure

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Hello, Worldwide Web!</title>
+        <title>Welcome to my website</title>
     </head>
     <body>
-        <h1>Hello, Worldwide Web!</h1>
+        <h1>Ready to know me</h1>
     </body>
 </html>
