--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <title>Welcome to my website</title>
     </head>
     <body>
-        <h1>Ready to know me</h1>
+        <h1>MUNYUN CUTTIN UP</h1>
+        <h2>CUTS WE DO</h2> <br>
+
     </body>
 </html>
