--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <body>
         <h1>MUNYUN CUTTIN UP</h1>
         <h2>CUTS WE DO</h2> <br>
+        <a href= "https://www.360jeezy.com/">
+           Our teacher
+        </a>
+        <br>" >
+            example.com
+        </a>
+        <br>
 
     </body>
 </html>
