--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
            Our teacher
         </a>
         <br>" >
-            example.com
+        <a href= "https://www.nps.gov/yell/index.htm">
+            <img src= "https://t0.gstatic.com/licensed-image?q=tbn:ANd9GcTmqMNltK383-sqsF17P_lpJ7RHzTKqAmUrcKRIXoovTGv7hjzMVeM76hg9qi4Kiyok "width = 200px" "Height = 200px " alt="Yellow stone national park">
+            </a>
         </a>
         <br>
 
