code hs 2.5 new link with images

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
         </a>
         <br>" >
         <a href= "https://www.nps.gov/yell/index.htm">
-            <img src= "https://t0.gstatic.com/licensed-image?q=tbn:ANd9GcTmqMNltK383-sqsF17P_lpJ7RHzTKqAmUrcKRIXoovTGv7hjzMVeM76hg9qi4Kiyok "width = 200px" "Height = 200px " alt="Yellow stone national park">
+            <img src= "https://t0.gstatic.com/licensed-image?q=tbn:ANd9GcTmqMNltK383-sqsF17P_lpJ7RHzTKqAmUrcKRIXoovTGv7hjzMVeM76hg9qi4Kiyok " width = 200px height = 200px  alt="Yellow stone national park">
             </a>
+
         </a>
         <br>
 
