--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <body>
         <h1>MUNYUN CUTTIN UP</h1>
         <h2>CUTS WE DO</h2> <br>
+        <p>Low taper<br>
+            Burst fade<br>
+            mid taper<br>
+            high taper
+
+        </p>
         <a href= "https://www.360jeezy.com/">
            Our teacher
         </a>
