--- a/index.html
+++ b/index.html
@@ -48,6 +48,24 @@
             <li>hair level: all lengths</li>
             <li>price: 30 dollars.</li>
         </ul>
+        <h1>My customers</h1>
+        <table border="1">
+            <tr>
+                <th>Lowtaper</th>
+                <th>Mid taper</th>
+                <th>High taper</th>
+                
+            </tr>
+            <tr>
+                <td>jason</td>
+                <td>mikey</td>
+                <td>luther</td>
+            </tr>
+            <tr>
+                <td>king</td>
+                <td>Josh</td>
+                <td>kevin</td>
+            </tr>
         
 
     </body>
