--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Welcome to my website</title>
     </head>
-    <body>
-        <h1>MUNYUN CUTTIN UP</h1>
+    <body style="background-color: #f0f8ff;"> <!-- Light background color -->
+        <h1 style="font-size: 36px;">Munyun cuttin up</h1>
         <h2>CUTS WE DO</h2> <br>
         <p>Low taper<br>
             Burst fade<br>
