--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body style="background-color: #f0f8ff;"> <!-- Light background color -->
         <h1 style="font-size: 36px;">Munyun cuttin up</h1>
-        <h2>CUTS WE DO</h2> <br>
+        <h2 style="color:#555555"> Cuts we do </h2> <br>
         <p>Low taper<br>
             Burst fade<br>
             mid taper<br>
