--- a/index.html
+++ b/index.html
@@ -5,6 +5,32 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Welcome to my website</title>
+        <style>
+            body {
+                background-color: LightBlue;
+            }
+
+            h1 {
+                background-color: LawnGreen;
+            }
+
+            h2 {
+                background-color: LightYellow;
+            }
+
+            ul {
+                background-color: Sienna;
+            }
+
+            ol {
+                background-color: Orchid;
+            }
+
+            li {
+                font-size: 20px;
+            }
+        </style>
+
     </head>
     <body style="background-color: #f0f8ff;"> <!-- Light background color -->
         <h1 style="font-size: 36px;">Munyun cuttin up</h1>
