--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
                 font-size: 20px;
             }
         </style>
+         <style>
+            img {
+                width: 70px;
+                height: 70px;
+            }
+        </style>
+
 
     </head>
     <body style="background-color: #f0f8ff;"> <!-- Light background color -->
