--- a/index.html
+++ b/index.html
@@ -36,6 +36,26 @@
                 height: 70px;
             }
         </style>
+        <style>
+            table {
+                width: 100%;
+                font-family: Helvetica;
+            }
+
+            .header {
+                background-color: OliveDrab;
+                color: white;
+                text-align: center;
+            }
+
+            .odd-row {
+                background-color: SandyBrown;
+            }
+
+            .even-row {
+                background-color: LightCoral;
+            }
+        </style>
 
 
     </head>
